[package]
name = "obmc-cloud-client"
version = "0.2.0"
authors = ["Matthew Burns <matt@packet.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustbus = "0.6.0"

[source.crates-io]
replace-with = "vendored-sources"

[source.vendored-sources]
directory = "vendor"